-------------------------------- Release 4.0 --------------------------------

Release date: XXX 2012

CGAL 4.0 offers the following improvements and new functionality :


* License Changes
The whole CGAL-3.x series was released under a combination of LGPLv2 (for the
foundations of CGAL), and QPL (for the high-level packages). QPL was the former
license of the graphical toolkit Qt, but that license is not supported by any
major free software project. Furthermore, the terms of the LGPLv2 license are
ambiguous for a library of C++ templates, like CGAL.

The CGAL project, driven by the CGAL Editorial Board, has decided to change the
license scheme of CGAL. We increased the major number of the CGAL version to
'4' in order to reflect this license change. The CGAL-4.x series is released
under:


  - LGPLv3+ (that is LGPL "either version 3 of the License, or (at your option)
    any later version"), for the foundations of CGAL, instead of LGPLv2,

  - GPLv3+ for the high-level packages, instead of QPL.


* General

  - On Windows, CGAL libraries are now built by default as shared libraries
    (also called DLL). To run applications that use .dll files of CGAL, you
    must either copy the .dll files into the directory of the application, or
    add the path of the directory that contains those .dll files into the PATH
    environment variable.

  - On Windows, the CMake scripts of CGAL now search for shared version of the
    Boost libraries. You must ensure that the .dll files of Boost are found by
    the dynamic linker. You can, for example, add the path to the Boost .dll
    files to the PATH environment variable.

  - On Windows, CMake version 2.8.6 or higher is now required.

  - Eigen version 3.1 or later is now the recommended third party library to
    use in Planar Parameterization of Triangulated Surface Meshes, Surface
    Reconstruction from Point Sets, Approximation of Ridges and Umbilics on