@@ -202,6 +202,11 @@ CGAL 4.0 offers the following improvements and new functionality :  </p>
   removed. Use <code>Random_points_in_cube_d</code> instead.
 </ul>
 
+<h3>Linear and Quadratic Programming Solver</h3>
+<ul>
+<li>Minor bugfix.</li>
+</ul>
+
 <h3>Spatial Searching</h3>
 <ul>
   <li>The const-correctness of this package have been worked out. The transition for users should be smooth in
@@ -225,14 +230,6 @@ CGAL 4.0 offers the following improvements and new functionality :  </p>
   <li> Fix a thread-safety issue in <code>Delaunay_triangulation_2</code> remove functions.  As usual in CGAL, 
       the small overhead introduced for thread-safety can be deactivated by defining <code>CGAL_HAS_NO_THREADS</code>.</li>
   <li> Add extraction operator for the class <code>Constrained_triangulation_2</code> (and thus to all inheriting classes).</li>
-</ul>
-
-<h3> Support Library</h3>
-
-<ul>
-<li>Linear and Quadratic Programming Solver: 
-Minor bugfix. Prevents <code>bug_stich.mps</code>, <code>bug_taysom.mps</code>
-and other cases from crashing.
 </ul>
 
 </div>
